[gd_scene load_steps=9 format=3 uid="uid://cup1s6ctjyj0r"]

[ext_resource type="Script" path="res://script/confirmation_page.gd" id="1_l226x"]
[ext_resource type="FontFile" uid="uid://c2iu4eowycoxp" path="res://resources/font/Bungee/Bungee-Regular.ttf" id="2_dpl2d"]
[ext_resource type="Texture2D" uid="uid://t6o20l1ejnrs" path="res://resources/UI_Flat_Frame01a.png" id="2_w722p"]
[ext_resource type="Texture2D" uid="uid://c4axstyxv4s37" path="res://resources/svg/Button/IronButton/[1] Normal.png" id="4_8qh23"]
[ext_resource type="Texture2D" uid="uid://d4ko2rad36d6i" path="res://resources/svg/Button/IronButton/[2] Clicked.png" id="5_5ii82"]
[ext_resource type="Texture2D" uid="uid://cl7fknll7u2bv" path="res://resources/svg/Button/IronButton/[3] Hover.png" id="5_rjtdo"]
[ext_resource type="Texture2D" uid="uid://dgpwqt8sykys4" path="res://resources/svg/Button/IronButton/IronCross.png" id="7_7p6kv"]
[ext_resource type="PackedScene" uid="uid://di7ohmxvh7dwf" path="res://scene/transition_layer.tscn" id="8_s6b0l"]

[node name="ConfirmationPage" type="Node2D"]
script = ExtResource("1_l226x")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BackgroundControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.384314, 0.384314, 0.384314, 0.615686)

[node name="ColorRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -545.0
offset_right = 469.0
offset_bottom = 555.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w722p")

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.251852
anchor_top = 0.150677
anchor_right = 0.756137
anchor_bottom = 0.718454
offset_left = -245.0
offset_top = -111.0
offset_right = 247.0
offset_bottom = 47.0001
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dpl2d")
theme_override_font_sizes/font_size = 65
text = "- Read the rules

-Read the introduction card 

- Start when you are ready"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.282
anchor_bottom = 0.463
offset_left = 267.0
offset_top = 824.0
offset_right = 192.51
offset_bottom = 378.7
scale = Vector2(2, 2)
texture_normal = ExtResource("4_8qh23")
texture_pressed = ExtResource("5_5ii82")
texture_hover = ExtResource("5_rjtdo")

[node name="Label" type="Label" parent="CanvasLayer/ColorRect/TextureButton"]
layout_mode = 0
offset_left = 1.5
offset_right = 187.5
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dpl2d")
theme_override_font_sizes/font_size = 35
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButtonControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="TextureButton" parent="CanvasLayer/BackButtonControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.912
anchor_top = 2.587
anchor_right = 0.038
anchor_bottom = 4.537
offset_left = -72.52
offset_top = -72.48
offset_right = -22.52
offset_bottom = -22.48
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("7_7p6kv")
metadata/_edit_use_anchors_ = true

[node name="TransitionLayer" parent="." instance=ExtResource("8_s6b0l")]

[connection signal="pressed" from="CanvasLayer/ColorRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButtonControl/CloseButton" to="." method="_on_close_button_pressed"]
